# CryptoMonitor

./: .env.example  README.md  app.py  pyproject.toml
CryptoMonitor/: README.md  prueba.py
docs/: architecture.md
src/crypto_monitor/: __init__.py
src/crypto_monitor/application/: __init__.py  use_cases.py
src/crypto_monitor/domain/: __init__.py  entities.py  ports.py
src/crypto_monitor/infrastructure/: __init__.py  coingecko_client.py  config.py  repositories.py
src/crypto_monitor/presentation/: __init__.py  app.py  components.py
tests/: __init__.py
tests/application/: test_placeholder.py
tests/domain/: test_placeholder.py
tests/infrastructure/: test_placeholder.py
tests/presentation/: test_placeholder.py
