[project]
name = "crypto-monitor"
version = "1.0.0"
description = "Aplicación para monitorear criptomonedas utilizando Streamlit."
authors = [
    {name = "Luis Alberto Reyes Estrada"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.36.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]